-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 16
-
Component/s: hotspot
-
b25
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8263308 | 11.0.12-oracle | Dukebot | P4 | Resolved | Fixed | b01 |
| JDK-8263193 | 11.0.12 | Thomas Stuefe | P4 | Resolved | Fixed | b01 |
map_or_reserve_memory_aligned attempts to allocate aligned memory by:
1) reserving larger area
2) releasing it
3) attempting to re-reserve into the vacated address space a smaller area at the aligned start address
Since this may fail (between (2) and (3) someone may have grabbed that address concurrently), we do this in a loop. However, when failing to release it we will loop-reserve endlessly.
This is one of the reasons forJDK-8255954 whose root cause will be fixed with JDK-8255978. But we should guard against endless loops independently from that.
1) reserving larger area
2) releasing it
3) attempting to re-reserve into the vacated address space a smaller area at the aligned start address
Since this may fail (between (2) and (3) someone may have grabbed that address concurrently), we do this in a loop. However, when failing to release it we will loop-reserve endlessly.
This is one of the reasons for
- backported by
-
JDK-8263193 [windows] add loop fuse to map_or_reserve_memory_aligned
-
- Resolved
-
-
JDK-8263308 [windows] add loop fuse to map_or_reserve_memory_aligned
-
- Resolved
-
- relates to
-
JDK-8255954 [windows] UseNUMAInterleaving causes VM to balloon and hang
-
- Closed
-
-
JDK-8255978 [windows] os::release_memory may not release the full range
-
- Closed
-
(1 links to)