8256287: [windows] add loop fuse to map_or_reserve_memory_aligned

Reviewed-by: luhenry, iklam, minqi